// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable postcss-css-variables if options.cssVariables is false 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": undefined,
      },
    ],
    Array [
      "postcss-for",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-nesting",
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
          "nesting": false,
          "rem": false,
        },
      },
    ],
  ],
}
`;

exports[`should enable postcss-url if options.url is true 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    Array [
      "postcss-url",
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": undefined,
      },
    ],
    Array [
      "postcss-for",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-nesting",
    ],
    Array [
      "postcss-css-variables",
      true,
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
          "nesting": false,
          "rem": false,
        },
      },
    ],
  ],
}
`;

exports[`should have a good base config 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": undefined,
      },
    ],
    Array [
      "postcss-for",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-nesting",
    ],
    Array [
      "postcss-css-variables",
      true,
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
          "nesting": false,
          "rem": false,
        },
      },
    ],
  ],
}
`;

exports[`should pass options.browsers to postcss-cssnext  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": undefined,
      },
    ],
    Array [
      "postcss-for",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-nesting",
    ],
    Array [
      "postcss-css-variables",
      true,
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": "foo",
          "customProperties": false,
          "nesting": false,
          "rem": false,
        },
      },
    ],
  ],
}
`;

exports[`should pass options.cssVariables to postcss-css-variables 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": undefined,
      },
    ],
    Array [
      "postcss-for",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-nesting",
    ],
    Array [
      "postcss-css-variables",
      Object {
        "foo": "bar",
      },
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
          "nesting": false,
          "rem": false,
        },
      },
    ],
  ],
}
`;

exports[`should pass options.importPath to postcss-import  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": "foo",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": undefined,
      },
    ],
    Array [
      "postcss-for",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-nesting",
    ],
    Array [
      "postcss-css-variables",
      true,
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
          "nesting": false,
          "rem": false,
        },
      },
    ],
  ],
}
`;

exports[`should pass options.mixinsPath to postcss-mixins  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "foo",
      },
    ],
    Array [
      "postcss-for",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-nesting",
    ],
    Array [
      "postcss-css-variables",
      true,
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
          "nesting": false,
          "rem": false,
        },
      },
    ],
  ],
}
`;

exports[`should pass options.url to postcss-url 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    Array [
      "postcss-url",
      Object {
        "foo": "bar",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": undefined,
      },
    ],
    Array [
      "postcss-for",
    ],
    Array [
      "postcss-conditionals",
    ],
    Array [
      "postcss-nesting",
    ],
    Array [
      "postcss-css-variables",
      true,
    ],
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
          "nesting": false,
          "rem": false,
        },
      },
    ],
  ],
}
`;
